delete file ready
